fix alignment of checkboxes, fixes #9305

--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -151,11 +151,7 @@ form.default {
         }
     }
 
-    input[type=checkbox] {
-        vertical-align: bottom;
-    }
-
-    input[type=radio] {
+    input[type=checkbox], input[type=radio] {
         vertical-align: text-bottom;
     }
 
